--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,24 @@
+@font-face {
+  font-family: FiraSans;
+  src: url(../../vendor/fonts/FiraSans-Regular.ttf);
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 16px;
+  font-family: FiraSans;
 }
 
-.header__title {
+.header__logo {
   font-size: 2em;
   color: white;
+}
+
+.header__logo-last {
+  color: rgb(222, 147, 176);
+  text-shadow: 0 0 25px rgb(222, 147, 176);
 }
 
 .header__nav {
