--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,21 +4,26 @@
 }
 
 .header {
+  padding: 4rem 12% 4rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px;
   font-family: FiraSans;
 }
 
 .header__logo {
-  font-size: 2em;
+  font-size: 2.5em;
   color: white;
+  text-decoration: none;
+}
+
+.header__logo:hover {
+  cursor: pointer;
 }
 
 .header__logo-last {
-  color: rgb(222, 147, 176);
-  text-shadow: 0 0 25px rgb(222, 147, 176);
+  color: rgb(114, 229, 225);
+  text-shadow: 0 0 25px rgb(85, 192, 234);
 }
 
 .header__nav {
@@ -29,7 +34,7 @@
 .header__nav-link {
   text-decoration: none;
   color: white;
-  font-size: 1em;
+  font-size: 1.5em;
   padding: 8px 12px;
 }
 
