--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,6 +9,11 @@
   justify-content: space-between;
   align-items: center;
   font-family: FiraSans;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 5;
+  background: rgba(0, 0, 0, 0.6);
 }
 
 .header__logo {
