--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
 }
 
 .header {
-  padding: 4rem 12% 4rem;
+  padding: 4rem 12%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -14,6 +14,8 @@
   position: fixed;
   z-index: 5;
   background: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .header__logo {
