--- a/src/components/FeaturedProjects/FeaturedProjects.css
+++ b/src/components/FeaturedProjects/FeaturedProjects.css
@@ -6,6 +6,7 @@
 .featured-project {
   display: flex;
   gap: 16px;
+  font-family: FiraSansLight;
 }
 
 .featured-project__content {
@@ -14,7 +15,6 @@
 
 .featured-project__header {
   margin: auto;
-  font-family: FiraSansLight;
   color: rgb(114, 229, 225);
 }
 
@@ -22,8 +22,24 @@
   font-size: 2em;
 }
 
+.featured-project__description {
+  display: inline-flex;
+  max-width: 50%;
+  position: relative;
+  font-size: 1em;
+  background-color: rgb(35, 29, 55);
+  padding: 20px;
+  border-radius: 20px;
+}
+
 .featured-project__image {
-  width: 350px;
-  height: 200px;
-  border-radius: 4px;
+  position: absolute;
+  width: 100%;
+  max-width: 700px;
+  min-height: 500px;
+  border-radius: 10px;
+}
+
+.featured-project__link {
+  margin-right: 1rem;
 }
