--- a/src/components/FeaturedProjects/FeaturedProjects.css
+++ b/src/components/FeaturedProjects/FeaturedProjects.css
@@ -49,8 +49,10 @@
   width: 24px;
   height: 24px;
   fill: white;
+  transition: transform 0.3s ease, fill 0.3s ease;
 }
 
 .featured-project__icon:hover {
   fill: rgb(114, 229, 225);
+  transform: scale(1.2);
 }
