--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -7,7 +7,6 @@
   padding: 4rem 12% 4rem;
   font-family: FiraSans;
   min-height: 100vh;
-  text-align: center;
 }
 
 .main__title {
@@ -71,14 +70,12 @@
 }
 
 .main__about {
-  color: grey;
-  width: 40%;
+  color: rgb(134, 134, 134);
+  width: 45%;
   text-align: justify;
-  padding: 80px 0px;
+  padding: 10px 0px;
 }
 
 .main__content {
-  display: flex;
-  justify-content: center;
   animation: fadeIn 2s ease-in-out;
 }
