--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -21,11 +21,14 @@
 .main__skills {
   flex: 1;
   text-align: left;
+  color: white;
+  padding: 2rem;
 }
 
 .main__title {
   color: white;
   font-size: 3.5em;
+  margin-top: 0px;
   margin-bottom: 8px;
   animation: fadeIn 1.5s ease-in-out;
 }
@@ -36,9 +39,9 @@
 }
 
 .main__typing {
+  margin: auto;
   color: white;
-  margin-bottom: 2rem;
-  font-size: 2em;
+  font-size: 1.7em;
   animation: fadeIn 3.5s ease-in-out;
 }
 
@@ -68,6 +71,7 @@
   animation: gradientShift 3s linear infinite;
   background-clip: text;
   color: transparent;
+  white-space: nowrap;
 }
 
 .main__typing-gradient::after {
@@ -91,13 +95,6 @@
 
 .main__content {
   animation: fadeIn 2s ease-in-out;
-}
-
-.main__skills {
-  color: white;
-  padding: 2rem;
-  background-color: #1a1a1a;
-  border-radius: 8px;
 }
 
 @media (max-width: 768px) {
