--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -19,10 +19,21 @@
 }
 
 .main__skills {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   flex: 1;
   text-align: left;
   color: white;
   padding: 2rem;
+}
+
+.main__skills-icon {
+  display: flex;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  fill: white;
 }
 
 .main__title {
