--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -14,6 +14,8 @@
 }
 
 .main__intro {
+  padding-bottom: 7em;
+  padding-left: 10em;
   flex: 1;
   text-align: left;
 }
@@ -24,7 +26,7 @@
   flex-direction: column;
   flex: 1;
   text-align: left;
-  color: white;
+  color: transparent;
   padding: 2rem;
 }
 
@@ -34,11 +36,23 @@
   width: 50px;
   height: 50px;
   fill: white;
+  animation: fadeIn 1.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 .main__title {
   color: white;
-  font-size: 3.5em;
+  font-size: 4em;
   margin-top: 0px;
   margin-bottom: 8px;
   animation: fadeIn 1.5s ease-in-out;
@@ -52,7 +66,7 @@
 .main__typing {
   margin: auto;
   color: white;
-  font-size: 1.7em;
+  font-size: 3em;
   animation: fadeIn 3.5s ease-in-out;
 }
 
@@ -99,7 +113,7 @@
 
 .main__about {
   color: rgb(134, 134, 134);
-  width: 100%;
+  width: 60%;
   text-align: justify;
   padding: 10px 0px;
 }
