add vertical line

--- a/src/components/SocialList/SocialList.css
+++ b/src/components/SocialList/SocialList.css
@@ -22,3 +22,9 @@
   fill: rgb(114, 229, 225);
   transform: scale(1.5);
 }
+
+.social-list__line {
+  width: 2px;
+  height: calc(100vh - 2rem);
+  background-color: rgba(255, 255, 255, 0.5);
+}
