--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,8 +3,13 @@
   src: url(../../vendor/fonts/FiraSans-Regular.ttf);
 }
 
+@font-face {
+  font-family: FiraSansLight;
+  src: url(../../vendor/fonts/FiraSans-Light.ttf);
+}
+
 .header {
-  padding: 4rem 12%;
+  padding: 2rem 7%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,13 +24,16 @@
 }
 
 .header__logo {
-  font-size: 2.5em;
+  font-size: 2em;
   color: white;
   text-decoration: none;
+  font-family: FiraSansLight;
+  transition: transform 0.5s ease;
 }
 
 .header__logo:hover {
   cursor: pointer;
+  transform: scale(1.1);
 }
 
 .header__logo-last {
@@ -41,10 +49,12 @@
 .header__nav-link {
   text-decoration: none;
   color: white;
-  font-size: 1.5em;
+  font-size: 1em;
+  font-family: FiraSansLight;
   padding: 8px 12px;
 }
 
 .header__nav-link:hover {
   cursor: pointer;
+  color: rgb(114, 229, 225);
 }
