--- a/src/components/SocialList/SocialList.css
+++ b/src/components/SocialList/SocialList.css
@@ -24,6 +24,7 @@
 }
 
 .social-list__line {
+  align-self: center;
   width: 2px;
   height: calc(100vh - 2rem);
   background-color: rgba(255, 255, 255, 0.5);
