--- a/src/components/SocialList/SocialList.css
+++ b/src/components/SocialList/SocialList.css
@@ -5,13 +5,14 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  animation: fadeIn 6s ease-in-out;
 }
 .social-list__link {
   display: inline-block;
 }
 
 .social-list__icon {
-  fill: white;
+  fill: rgb(178, 178, 178);
   width: 24px;
   height: 24px;
   cursor: pointer;
@@ -27,5 +28,16 @@
   align-self: center;
   width: 2px;
   height: calc(100vh - 2rem);
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(178, 178, 178);
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(1);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
