configure project cards and start entering 3 projects

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -32,9 +32,7 @@
   gap: 7rem;
 }
 
-.projectsOther {
-}
-
-.projectsOther__header {
+.projects__sub-title {
   color: white;
+  padding-top: 3em;
 }
