--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,4 +1,44 @@
-.project__card {
-  color: white;
-  padding: 2em 0;
+.project-card {
+  background-color: #153875bd;
+  padding: 16px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.project-card:hover {
+  transform: translateY(-5px);
+}
+
+.project-card__title {
+  font-size: 1.5em;
+}
+
+.project-card__description {
+  font-size: 1em;
+  color: rgb(178, 178, 178);
+}
+
+.project-card__technologies {
+  font-size: 0.9em;
+  color: #999898;
+}
+
+.project-card__links {
+  display: flex;
+  gap: 12px;
+}
+
+.project-card__link {
+  text-decoration: none;
+  color: #007bff;
+  font-weight: bold;
+}
+
+.project-card__link:hover {
+  text-decoration: underline;
 }
