style contact add sj description

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -100,7 +100,7 @@
 }
 
 .main__typing-gradient::after {
-  content: "_";
+  content: "|";
   color: #72e5e1;
   animation: blink 0.8s step-end infinite;
 }
