--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -18,10 +18,11 @@
 
 .contact__header {
   color: rgb(114, 229, 225);
-  font-size: 1.5em;
+  font-size: 1.4em;
   text-align: center;
   margin-top: 3em;
   margin-bottom: 3rem;
+  font-family: FiraSansLight;
 }
 
 .contact__sub-header {
