--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -96,3 +96,13 @@
     font-size: 1em;
   }
 }
+
+@media (max-width: 768px) {
+  .project-card {
+    gap: 0;
+  }
+
+  .project-card__title {
+    margin: 0.2em 0em;
+  }
+}
