reduce paddin for tablet screen

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -145,6 +145,10 @@
   .main__typing {
     font-size: 1.8em;
   }
+
+  .main__intro {
+    padding-left: 6em;
+  }
 }
 
 @media (max-width: 390px) {
