--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -13,7 +13,7 @@
 .blog__title {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   margin-bottom: 1.5em;
   color: rgb(178, 178, 178);
   font-size: 2em;
