--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: FiraSans;
-  src: url(../../vendor/fonts/FiraSans-Regular.ttf);
+  src: url(/fonts/FiraSans-Regular.ttf);
 }
 
 .blog {
