--- a/src/components/FeaturedProjects/FeaturedProjects.css
+++ b/src/components/FeaturedProjects/FeaturedProjects.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: FiraSansLight;
-  src: url(/fonts/FiraSans-Light.ttf);
+  src: url(/public/fonts/FiraSans-Light.ttf);
 }
 
 .featured-project {
