--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: FiraSans;
-  src: url(/docs/fonts/FiraSans-Regular.ttf);
+  src: url("/website/fonts/FiraSans-Regular.ttf") format("truetype");
 }
 
 .main {
