--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: FiraSans;
-  src: url("/fonts/FiraSans-Regular.ttf") format("truetype");
+  src: url(/fonts/FiraSans-Regular.ttf) format("truetype");
 }
 
 @font-face {
   font-family: FiraSansLight;
-  src: url("/fonts/FiraSans-Light.ttf") format("truetype");
+  src: url(/fonts/FiraSans-Light.ttf) format("truetype");
 }
 
 .header {
