--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: FiraSans;
-  src: url(/docs/fonts/FiraSans-Regular.ttf);
+  src: url(/fonts/FiraSans-Regular.ttf) format("truetype");
 }
 
 @font-face {
   font-family: FiraSansLight;
-  src: url(/docs/fonts/FiraSans-Light.ttf);
+  src: url(/fonts/FiraSans-Light.ttf) format("truetype");
 }
 
 .contact {
