--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: FiraSansLight;
-  src: url(/website/fonts/FiraSans-Light.ttf);
+  src: url(/fonts/FiraSans-Light.ttf) format("truetype");
 }
 
 .footer {
