--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: FiraSans;
-  src: url(/website/fonts/FiraSans-Regular.ttf);
+  src: url(/fonts/FiraSans-Regular.ttf) format("truetype");
 }
 
 .projects {
