--- a/src/components/FeaturedProjects/FeaturedProjects.css
+++ b/src/components/FeaturedProjects/FeaturedProjects.css
@@ -38,7 +38,7 @@
 .featured-project__technologies {
   display: inline-flex;
   position: relative;
-  color: #999898;
+  color: white;
   max-width: 30%;
   word-wrap: break-word;
   word-break: break-word;
