--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -32,7 +32,7 @@
 
 .project-card__description {
   font-size: 1em;
-  color: rgb(178, 178, 178);
+  color: white;
 }
 
 .project-card__technologies {
