--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -14,7 +14,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 1.5em;
-  color: rgb(178, 178, 178);
+  color: white;
   font-size: 2em;
   gap: 1rem;
 }
