--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -180,6 +180,17 @@
   padding: 10px 0px;
 }
 
+.main__contact {
+  color: inherit;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  font-weight: inherit;
+}
+
+.main__contact:hover {
+  color: #72e5e1;
+}
+
 .main__content {
   animation: fadeIn 2s ease-in-out;
 }
